# code_generator_rs

./: .gitignore  Cargo.toml  README.md  askama.toml
.github/workflows/: Profile-Summary-Cards.yml
app/: Cargo.toml  package.json
app/src/: App.tsx  data-provider.ts  main.rs  routes.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: error.rs  main.rs
app/src-tauri/src/commands/: mod.rs  project.rs  template.rs  template_processor.rs
app/src/app/: app.rs  custom_window.rs  file_drop.rs  font.rs  logger.rs  mod.rs  toggle_switch.rs
app/src/app/components/: demo_page.rs  mod.rs  service_page.rs  web_page.rs
app/src/components/tag-manager/: index.tsx
app/src/pages/projects/: create.tsx  edit.tsx  list.tsx  show.tsx
app/src/pages/templates/: create.tsx  edit.tsx  index.ts  list.tsx  render.tsx  show.tsx
benches/: my_benchmark.rs
c#/CodeGeneratorApp/: CodeGeneratorApp.sln
c#/CodeGeneratorApp/CodeGeneratorApp/CodeGeneratorApp/: App.xaml  App.xaml.cs  CodeGeneratorApp.csproj
c#/CodeGeneratorApp/CodeGeneratorApp/CodeGeneratorApp.Core/: CodeGeneratorApp.Core.csproj  Interop.cs  RegionNames.cs
c#/CodeGeneratorApp/CodeGeneratorApp/CodeGeneratorApp.Core/Mvvm/: RegionViewModelBase.cs  ViewModelBase.cs
c#/CodeGeneratorApp/CodeGeneratorApp/CodeGeneratorApp/ViewModels/: MainWindowViewModel.cs
c#/CodeGeneratorApp/CodeGeneratorApp/CodeGeneratorApp/Views/: MainWindow.xaml  MainWindow.xaml.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.EntityGenerate/: EntityGenerateModule.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.EntityGenerate/Services/: EntityGenerator.cs  EntityGeneratorService.cs  IEntityGeneratorService.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.EntityGenerate/ViewModels/: ViewAViewModel.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.EntityGenerate/Views/: ViewA.xaml  ViewA.xaml.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.ModuleName/: CodeGeneratorApp.Modules.ModuleName.csproj  ModuleNameModule.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Modules/CodeGeneratorApp.Modules.ReactGenerate/: CodeGeneratorApp.Modules.ReactGenerate.csproj  ReactGenerateModule.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Services/CodeGeneratorApp.Services/: AppFFIError.cs  CodeGeneratorApp.Services.csproj  EntityGenerateService.cs  EntityGenerator.cs  InteropException.cs  MessageService.cs  ReactGenerateService.cs  ReactGenerator.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Services/CodeGeneratorApp.Services.Interfaces/: IEntityGenerateService.cs  IMessageService.cs  IReactGenerateService.cs
c#/CodeGeneratorApp/CodeGeneratorApp/Tests/CodeGeneratorApp.Modules.ModuleName.Tests/: CodeGeneratorApp.Modules.ModuleName.Tests.csproj
code_generator/: Cargo.toml  sqlite.db
code_generator/src/: error.rs  lib.rs
code_generator/src/db_entities/: mod.rs  prelude.rs  projects.rs  templates.rs
code_generator/src/entities/: entity.rs  mod.rs  permision.rs  web_entity.rs  wes.rs
code_generator/src/services/: mod.rs  projects_svc.rs  templates_svc.rs
code_generator/templates/Application/: Service.cs
code_generator/templates/Application.Contracts/: IService.cs
code_generator/templates/Web/: api.ts  page.tsx
code_generator/templates/users/: profile.html
code_generator/tests/: my_test.rs
code_generator_cli/: Cargo.toml
code_generator_cli/src/: main.rs
csharp_binding/: Cargo.toml
csharp_binding/src/: ffi.rs  ffi_entity_service.rs  ffi_react_service.rs  ffi_service.rs  lib.rs
entity/: Cargo.toml
entity/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/entities/: templates.rs
profile-summary-card-output/: README.md
profile-summary-card-output/2077/: README.md
profile-summary-card-output/default/: README.md
profile-summary-card-output/dracula/: README.md
profile-summary-card-output/github/: README.md
profile-summary-card-output/github_dark/: README.md
profile-summary-card-output/gruvbox/: README.md
profile-summary-card-output/monokai/: README.md
profile-summary-card-output/nord_bright/: README.md
profile-summary-card-output/nord_dark/: README.md
profile-summary-card-output/radical/: README.md
profile-summary-card-output/solarized/: README.md
profile-summary-card-output/solarized_dark/: README.md
profile-summary-card-output/tokyonight/: README.md
profile-summary-card-output/vue/: README.md
profile-summary-card-output/zenburn/: README.md
src/: args.rs  error.rs  lib.rs  main.rs
src/app/: app.rs  mod.rs
src/entities/: Entity.rs  entity.rs  mod.rs  permision.rs  web_entity.rs  wes.rs
templates/: hello.html  macros.html
templates/Application/: Service.cs
templates/Application.Contracts/: CreateDto.cs  CreateOrUpdateDto.cs  Dto.cs  IService.cs  PagedAndSortedAndFilteredResultRequestDto.cs  UpdateDto.cs
templates/Domain/: Entity.cs  Exception.cs  IRepository.cs  Manager.cs
templates/EfCore/: EfCoreRepository.cs
templates/WES/: Controller.cs  Exception.cs  IRepository.cs  IService.cs  Repository.cs  Service.cs
templates/WES/Dto/: CreateDto.cs  Dto.cs  Dto.html  QueryDto.cs  UpdateDto.cs
templates/Web/: api.ts  dto.ts  page.tsx  store.ts
templates/products/: hello1.html
templates/users/: profile.html
tests/: my_test.rs
(+9 files in other folders)
