[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0"
askama = "^0"
tera = { version = "1.16.0", default-features = false }
lazy_static = "1.4.0"
Inflector = "0.11.4"
serde = {version="^1",features = ["derive"]}
serde_json = "^1"
erased-serde = "0.3.21"
walkdir = "2.3.2"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
thiserror = "1.0.31"
log = "0.4.17"
encoding_rs = "0.8.31"
futures = "0.3.28"
async-std = "1.12.0"
clap = {version = "^4",features = ["cargo"]}
[dev-dependencies]
criterion = "0.3.6"
tokio-test = "0.4.2"
[[bench]]
name = "my_benchmark"
harness = false
