[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0"
askama = "^0"
Inflector = "0.11.4"
serde = {version="^1",features = ["derive"]}
serde_json = "^1"
thiserror = "1.0.31"
clap = {version = "^4",features = ["cargo"]}
[dev-dependencies]
criterion = "0.3.6"
tokio-test = "0.4.2"
[[bench]]
name = "my_benchmark"
harness = false
