[package]
name = "app"
version = "0.1.0"
edition = "2021"
# default-run = "code_generator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
code_generator = { path = "../code_generator" }
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = { version = "0.18.0", features = ["image"] }
ehttp = "0.2.0"
image = { version = "0.24.3", default-features = false, features = [
    "jpeg",
    "png",
] }
poll-promise = "0.1.0"
rfd = "0.9.1"
