[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1.16.0", default-features = false }
lazy_static = "1.4.0"
encoding = "0.2.33"
Inflector = "0.11.4"
serde = "1.0.140"
erased-serde = "0.3.21"
walkdir = "2.3.2"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
thiserror = "1.0.31"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "my_benchmark"
harness = false
