[package]
name = "code_generator_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code_generator = { path = "../code_generator" }
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.58"
env_logger = "0.9.0"
log = "0.4.17"
