[package]
name = "csharp_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
code_generator = { path = "../code_generator" }
interoptopus = "0.14.15"
interoptopus_backend_csharp = "0.14.15"